# PollenPal

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  run_dev.py
docker/: README.md
docs/: DOCKER_SETUP.md  PRODUCTION.md  RESTRUCTURE.md
nginx/: nginx.conf
nginx/conf.d/: pollenpal.conf
scripts/: build.py  deploy.bat  deploy.ps1  deploy.py  deploy.sh  run.py  run_dev.py  run_dev_uv.py  test.py
src/pollenpal/: __init__.py
src/pollenpal/api/: __init__.py  main.py  models.py
src/pollenpal/cli/: __init__.py  main.py
src/pollenpal/core/: __init__.py  health.py  tracker.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_health.py  test_integration.py  test_models.py  test_pollen_tracker.py
