[project]
name = "pollenpal"
version = "0.1.0"
description = "UK Pollen Tracking API - FastAPI service for real-time pollen data and forecasts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.11.5"
]

[project.scripts]
pollenpal = "main:app"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
